<resources>
    <string name="app_name">Lynlissa art</string>

    <string name="gallery_fragment_name">Lynlissa art gallery</string>
    <string name="art_fragment_name">Lynlissa art</string>

    <string name="loading_error">Loading failed :(\nCheck your internet connection.</string>
    <string name="retry_button">Retry</string>
    <string name="description">Description:</string>

    <string name="about_artist_button">About Lynlissa</string>
    <string name="about_fragment_title">About</string>
    <string name="about_title">Lynlissa</string>
    <string name="about_text">Lynlissa is an aspiring digital artist.</string>
    <string name="about_application">
"This is an unique app for her arts.
Please, follows her at:"
    </string>
    <string name="artstation_name" translatable="false">ArtStation</string>
</resources>
