<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="ru.catstack.lynlissaart.ui.main.MainFragment"
        android:label="@string/gallery_fragment_name"
        tools:layout="@layout/main_fragment" >
        <action
            android:id="@+id/action_mainFragment_to_imageItemFragment"
            app:destination="@id/imageItemFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/imageItemFragment"
        android:name="ru.catstack.lynlissaart.ui.item.ImageItemFragment"
        android:label="@string/art_fragment_name"
        tools:layout="@layout/image_item_fragment">
        <argument
            android:name="artItem"
            app:argType="ru.catstack.lynlissaart.domain.Art" />
        <action
            android:id="@+id/action_imageItemFragment_to_photoViewFragment"
            app:destination="@id/photoViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ru.catstack.lynlissaart.ui.about.AboutFragment"
        android:label="@string/about_fragment_title"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/photoViewFragment"
        android:name="ru.catstack.lynlissaart.ui.item.photoview.PhotoViewFragment"
        android:label="photo_view_fragment"
        tools:layout="@layout/photo_view_fragment" >
        <argument
            android:name="imageUrl"
            app:argType="string" />
    </fragment>
</navigation>