<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.about.AboutFragment">

    <TextView
        android:id="@+id/aboutTitle"
        style="@style/StandardTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/lynlissa_avatar"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTitle" />

    <TextView
        android:id="@+id/aboutText"
        style="@style/StandardTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/aboutAppText"
        app:layout_constraintStart_toStartOf="@id/aboutAppText"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage" />

    <TextView
        android:id="@+id/aboutAppText"
        style="@style/StandardTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/about_application"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/deviantartButton"
        app:layout_constraintEnd_toEndOf="@id/twitterButton"
        app:layout_constraintStart_toStartOf="@id/vkButton" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deviantartButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/deviantart_logo"
        app:layout_constraintBottom_toTopOf="@id/artstationButton"
        app:layout_constraintEnd_toStartOf="@id/instagramButton"
        app:layout_constraintStart_toEndOf="@id/vkButton" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/vkButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/vk_logo"
        app:layout_constraintBottom_toTopOf="@id/artstationButton"
        app:layout_constraintEnd_toStartOf="@id/deviantartButton"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/instagramButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/instagram_logo"
        app:layout_constraintBottom_toTopOf="@id/artstationButton"
        app:layout_constraintEnd_toStartOf="@id/twitterButton"
        app:layout_constraintStart_toEndOf="@id/deviantartButton" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/twitterButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/twitter_logo"
        app:layout_constraintBottom_toTopOf="@id/artstationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/instagramButton" />

    <Button
        android:id="@+id/artstationButton"
        style="@style/StandardTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/artstation_button"
        android:text="@string/artstation_name"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/twitterButton"
        app:layout_constraintStart_toStartOf="@id/vkButton" />

</androidx.constraintlayout.widget.ConstraintLayout>